# llmmj

./: .env.example  .gitignore  CLAUDE.md  GITHUB_ACTIONS_GUIDE.md  LOCAL_DEVELOPMENT.md  Makefile  PR_TEST_TROUBLESHOOTING.md  PR_WORKFLOW_FIXES.md  README.md  SIMPLE_WORKFLOWS.md  TODO.md  WORKFLOW_SIMPLIFICATION.md  example_usage.py  main.py  pyproject.toml  run_loop_agents.py  run_sequencial_agents.py  test_kan_complete.py  test_subagent.py  test_validation.py
.github/: README.md
.github/workflows/: debug.yml  nightly.yml  pr-check-basic.yml  pr-check-minimal.yml  pr-check-uv-simple.yml  pr-check.yml  test-old.yml  test.yml
agents/: __init__.py  agent.py  agents.py  caller.py  runner.py
agents_loop/: __init__.py  agent.py
agents_seq/: __init__.py  agent.py
api/: README.md  __init__.py  fast_api.py  mahjong_utils.py
apimcp/: fast_api.py
dataset/: queries.json  queries.min.json
entity/: entity.py
evaluator/: agents_evaluator.py  evaluator.py  evaluator_sequential.py  libs.py  result.py
evalutor/: evals.py
exceptions/: __init__.py  exceptions.py
generator/: generator.py
libs/: evals.py  generator.py
llmmj/: llmmj.py  tools.py
mcp/: mcp_server.py
notebooks/: evals.ipynb  gen_queries.ipynb  google_adk_agent.ipynb  loop.ipynb  loop_en.ipynb  multi_agent.ipynb
prompts/: parts.py  prompts.py
references/: meld_types.md  sft.md
runner/: __init__.py  caller.py  runner.py
sources/: cot.md  cot_en.md  dora.md  hu.md  machi.md  rule.md  rule_en.md  score.md  yaku.md
tests/: README_TESTS.md  run_tests.py  test_agents_evaluator.py  test_basic.py  test_calculation.py  test_evaluator.py  test_evaluator_libs.py  test_generator.py  test_kan_complete.py  test_meld_calculation.py  test_validation.py
tools/: calculation.py
